--- a/package.json
+++ b/package.json
@@ -7,15 +7,23 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.8",
-    "@mui/material": "^5.14.8",
+    "@mui/joy": "^5.0.0-beta.8",
+    "@mui/material": "^5.14.11",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@udecode/plate": "^24.3.0",
+    "@udecode/plate-common": "^24.3.0",
     "axios": "^1.5.0",
+    "draft-js": "^0.11.7",
     "pdf-thumbnails-generator": "^1.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "slate": "^0.94.1",
+    "slate-history": "^0.93.0",
+    "slate-hyperscript": "^0.77.0",
+    "slate-react": "^0.99.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
